﻿

========== Author: Devrim Mert Yoyen===============
============== Start: 20/10/2021 ==================

______________20/10/2020_________________
Plateau Creating process Started
	Plateau Object Created
		Max Range Object Created
			CheckMaxRange function created
		Plateau Error List Created
	Plateau Object Finished
Plateau Creating process Finished
Rover Creating Process Started
	Rover Object Created
		Position Object Created
			Route Enum Created
			CheckPosition Function Created
		Position Object Finished
	Rover Object Finished
	______________20/10/2020_________________
	Rover addition mechanic added
	Answer Check and loop added
	all creation processes are done
