@@ -3,7 +3,9 @@ Microsoft Visual Studio Solution File, Format Version 12.00
 # Visual Studio Version 16
 VisualStudioVersion = 16.0.31702.278
 MinimumVisualStudioVersion = 10.0.40219.1
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "MarsRover", "MarsRover\MarsRover.csproj", "{2A6A524E-C86C-4DE1-80E4-8363CAB80754}"
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "MarsRover", "MarsRover\MarsRover.csproj", "{2A6A524E-C86C-4DE1-80E4-8363CAB80754}"
+EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "MarsRoverxUnitTest", "MarsRoverxUnitTest\MarsRoverxUnitTest.csproj", "{45BE8872-E2AB-43F4-96A1-04BD546D94EC}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
@@ -15,6 +17,10 @@ Global
 		{2A6A524E-C86C-4DE1-80E4-8363CAB80754}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{2A6A524E-C86C-4DE1-80E4-8363CAB80754}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{2A6A524E-C86C-4DE1-80E4-8363CAB80754}.Release|Any CPU.Build.0 = Release|Any CPU
+		{45BE8872-E2AB-43F4-96A1-04BD546D94EC}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{45BE8872-E2AB-43F4-96A1-04BD546D94EC}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{45BE8872-E2AB-43F4-96A1-04BD546D94EC}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{45BE8872-E2AB-43F4-96A1-04BD546D94EC}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
