@@ -18,8 +18,12 @@ Rover Creating Process Started
 			CheckPosition Function Created
 		Position Object Finished
 	Rover Object Finished
-	______________20/10/2020_________________
+	______________21/10/2020_________________
 	Rover addition mechanic added
 	Answer Check and loop added
 	all creation processes are done
+	Move mechanic added
+	Route Check added
+	Crash mechanic added
+
 
